Compile with Java 11 (#810)